--- a/LIBGDX/desktop/build.gradle
+++ b/LIBGDX/desktop/build.gradle
@@ -1,5 +1,6 @@
 sourceCompatibility = 1.7
-sourceSets.main.java.srcDirs = [ "src/" ]
+sourceSets.main.java.srcDirs = [ "src/com/nintendont/desktop" ]
+sourceSets.test.java.srcDirs = [ "src/test/java" ]
 sourceSets.main.resources.srcDirs = ["../core/assets"]
 
 project.ext.mainClassName = "com.nintendont.desktop.DesktopLauncher"
