--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,8 @@
 sourceCompatibility = 1.8
 dependencies {
     implementation 'junit:junit:4.12'
+    implementation 'org.apache.poi:poi:5.0.0'
+    implementation 'org.apache.poi:poi-ooxml:5.0.0'
 }
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
